--- a/.github/workflows/pull_docker_image.yml
+++ b/.github/workflows/pull_docker_image.yml
@@ -15,7 +15,8 @@ jobs:
       - name: Install Docker
         run: |
           sudo apt-get update
-          sudo apt-get install -y docker.io
+          curl -fsSL https://test.docker.com -o test-docker.sh
+          sudo sh test-docker.sh
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
