--- a/.github/workflows/pull_docker_image.yml
+++ b/.github/workflows/pull_docker_image.yml
@@ -13,26 +13,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Install Docker
-        run: |
-          sudo apt-get update
-          curl -fsSL https://test.docker.com -o test-docker.sh
-          sudo sh test-docker.sh
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Pull Docker image
-        run: |
-          sudo docker pull issiwara/inventory_sys_front
-
-      - name: Start Docker container
-        run: |
-          sudo docker run -d -p 80:80 issiwara/inventory_sys_front
-
       - name: Configure AWS CLI
         run: |
           sudo apt-get install -y awscli
@@ -48,6 +28,7 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           port: ${{ secrets.EC2_PORT }}
           script: |
-            sudo docker stop $(sudo docker ps -q)
-            sudo docker rm $(sudo docker ps -aq)
-            sudo docker run -d -p 80:80 issiwara/inventory_sys_front
+            sudo docker pull issiwara/inventory_sys_front
+            sudo docker stop inventoryFront
+            sudo docker rm inventoryFront
+            sudo docker run -d -p 80:80 --name inventoryFront issiwara/inventory_sys_front
